--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -17,8 +17,9 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
-
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_AUTH_TOKEN }}
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -30,8 +31,6 @@ jobs:
       - name: Bump version
         run: npm version ${{ inputs.bump_type }}
       - name: Push changes to GitHub
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_AUTH_TOKEN }}
         run: |
           git push
           git push --tags
