--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "log-service-lib",
+  "name": "log-service-lib-otel",
   "version": "1.0.1",
   "main": "dist/index.js",
   "scripts": {
